fix(slack): Fix Slack callback handling
Squashed commit of the following:

commit 43834b9b0afc437eff15024c99333321bfb81f02
Author: Luis Pollo <lpollo@netflix.com>
Date:   Tue Sep 21 09:29:06 2021 -0700

    test(slack): Enable running Slack callback tests with Netflix classpath

commit 892669bac3d49757880a362f967e167cb2152d7f
Author: Luis Pollo <lpollo@netflix.com>
Date:   Mon Sep 20 23:09:15 2021 -0700

    refactor(slack): Rename SlackAppController to SlackAppServlet

commit 13f271a7377f28a7015fab416ceca4a7ffd9511c
Author: Luis Pollo <lpollo@netflix.com>
Date:   Mon Sep 20 17:44:46 2021 -0700

    fix(slack): Fix Slack callback handling

(cherry picked from commit a5f435a6daa18f63c4daf30f450ad7bc8f6a9a49)

--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -1,9 +1,11 @@
 plugins {
-  id("application")
+  id "application"
+  id "com.github.hauner.jarTest" version "1.0.1"
 }
 
-apply(plugin: "com.netflix.dgs.codegen")
-apply(plugin: "io.spinnaker.package")
+apply plugin: "com.netflix.dgs.codegen"
+apply plugin: "io.spinnaker.package"
+apply plugin: "com.github.hauner.jarTest"
 
 repositories {
   mavenCentral() // for graphql-java-extended-scalars
@@ -46,7 +48,7 @@ dependencies {
   implementation("io.swagger.core.v3:swagger-annotations:2.1.2")
   implementation("org.apache.maven:maven-artifact:3.6.3")
   implementation("io.spinnaker.kork:kork-plugins")
-  implementation("com.slack.api:bolt-servlet:1.6.0")
+  implementation("com.slack.api:bolt-servlet:${slackSdkVersion}")
   implementation("com.graphql-java:graphql-java-extended-scalars:16.0.1")
   implementation(platform('com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:4.3.2'))
   implementation("com.netflix.graphql.dgs:graphql-dgs-spring-boot-starter")
