fix(database): standardize table name
(cherry picked from commit 9efbfe376a3a1a46f15c4e9caa73664129e1f760)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -371,3 +371,6 @@ databaseChangeLog:
 - include:
     file: changelog/20210917-feature-rollout-table.yml
     relativeToChangelogFile: true
+- include:
+    file: changelog/20210923-rename-feature-rollout-table.yml
+    relativeToChangelogFile: true
