feat(resolvers): add column to capture rollout state
(cherry picked from commit 76153101685bfc3261a2a170c72a740fcafc5412)

--- a/keel-sql/keel-sql.gradle
+++ b/keel-sql/keel-sql.gradle
@@ -214,6 +214,11 @@ jooq {
                 enumConverter = true
                 includeExpression = "TASK_TRACKING.SUBJECT_TYPE"
               }
+              forcedType {
+                userType = "com.netflix.spinnaker.keel.rollout.RolloutStatus"
+                enumConverter = true
+                includeExpression = "FEATURE_ROLLOUT.STATUS"
+              }
             }
           }
           target {
