fix(resolvers): fixed typo in migration
(cherry picked from commit 98cbc9a90ee0aefc7c48e29fa3dfc350e45ec8b2)

--- a/keel-sql/src/main/resources/db/changelog/20210928-add-status-to-feature-rollout.yml
+++ b/keel-sql/src/main/resources/db/changelog/20210928-add-status-to-feature-rollout.yml
@@ -11,7 +11,8 @@ databaseChangeLog:
             type: varchar(64)
             constraints:
             - nullable: false
-          value: PENDING
+            value: IN_PROGRESS
+            afterColumn: resource_id
     - dropNotNullConstraint:
         tableName: feature_rollout
         columnName: first_attempt_at
