--- a/keel-titus-plugin/keel-titus-plugin.gradle
+++ b/keel-titus-plugin/keel-titus-plugin.gradle
@@ -13,6 +13,7 @@ dependencies {
   implementation("org.springframework:spring-context")
   implementation("org.springframework.boot:spring-boot-autoconfigure")
   implementation("com.netflix.frigga:frigga")
+  implementation("io.arrow-kt:arrow-optics:1.0.0")
 
   testImplementation(project(":keel-test"))
   testImplementation("io.strikt:strikt-jackson")
