--- a/keel-titus-plugin/keel-titus-plugin.gradle
+++ b/keel-titus-plugin/keel-titus-plugin.gradle
@@ -2,6 +2,7 @@ dependencies {
   api(project(":keel-api"))
   api(project(":keel-titus-api"))
   implementation(project(":keel-core")) // TODO: ideally not
+  implementation(project(":keel-optics"))
   implementation(project(":keel-clouddriver"))
   implementation(project(":keel-orca"))
   implementation(project(":keel-retrofit"))
@@ -13,7 +14,6 @@ dependencies {
   implementation("org.springframework:spring-context")
   implementation("org.springframework.boot:spring-boot-autoconfigure")
   implementation("com.netflix.frigga:frigga")
-  implementation("io.arrow-kt:arrow-optics:1.0.0")
 
   testImplementation(project(":keel-test"))
   testImplementation("io.strikt:strikt-jackson")
