--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 apply plugin: "com.netflix.dgs.codegen"
+apply plugin: "io.spinnaker.package"
 apply plugin: "com.github.hauner.jarTest"
 
 repositories {
