chore(build): Align kork/fiat coordinates on com.spinnaker.netflix.{}.internal
Squashed commit of the following:

commit b59e5329982e47c151004efc0f492774d7db5bfd
Author: Adam Jordens <adam@jordens.org>
Date:   Wed Oct 6 17:28:04 2021 -0700

    chore(build): Align kork/fiat coordinates on com.spinnaker.netflix.{}.internal

commit 000d61d09c3d57b08468712cb48326393cafc3f9
Author: Adam Jordens <adam@jordens.org>
Date:   Wed Oct 6 17:27:58 2021 -0700

    Update dependency lock

(cherry picked from commit 524b762e51596694a77edfa338af8caa87d9d8d8)

--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,10 @@ allprojects {
     }
 
     dependencies {
-      annotationProcessor(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
+      annotationProcessor(platform("com.netflix.spinnaker.kork.internal:kork-bom"))
       annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
-      implementation(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
+      implementation(platform("com.netflix.spinnaker.kork.internal:kork-bom"))
       implementation("org.slf4j:slf4j-api")
 
       testImplementation("org.junit.platform:junit-platform-runner")
