--- a/keel-clouddriver/keel-clouddriver.gradle
+++ b/keel-clouddriver/keel-clouddriver.gradle
@@ -1,7 +1,7 @@
 dependencies {
   implementation(project(":keel-retrofit"))
   implementation(project(":keel-core"))
-  implementation("io.spinnaker.kork:kork-moniker")
+  implementation("com.netflix.spinnaker.kork.internal:kork-moniker")
   implementation("com.fasterxml.jackson.core:jackson-databind")
   implementation("com.fasterxml.jackson.core:jackson-annotations")
   implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
