--- a/keel-artifact/keel-artifact.gradle
+++ b/keel-artifact/keel-artifact.gradle
@@ -3,7 +3,7 @@ dependencies {
   implementation(project(":keel-igor"))
   implementation(project(":keel-clouddriver"))
   implementation("org.springframework:spring-context")
-  implementation("io.spinnaker.kork:kork-artifacts")
+  implementation("com.netflix.spinnaker.kork.internal:kork-artifacts")
   testImplementation("dev.minutest:minutest")
   testImplementation("io.strikt:strikt-core")
   testImplementation(project(":keel-test"))
