--- a/keel-bakery-plugin/keel-bakery-plugin.gradle
+++ b/keel-bakery-plugin/keel-bakery-plugin.gradle
@@ -5,8 +5,8 @@ dependencies {
   implementation(project(":keel-igor"))
   implementation(project(":keel-orca"))
   implementation(project(":keel-artifact"))
-  implementation("io.spinnaker.kork:kork-exceptions")
-  implementation("io.spinnaker.kork:kork-security")
+  implementation("com.netflix.spinnaker.kork.internal:kork-exceptions")
+  implementation("com.netflix.spinnaker.kork.internal:kork-security")
   implementation("com.netflix.frigga:frigga")
 
   testImplementation(project(":keel-test"))
