--- a/keel-bom/keel-bom.gradle
+++ b/keel-bom/keel-bom.gradle
@@ -7,7 +7,7 @@ javaPlatform {
 }
 
 dependencies {
-  api(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
+  api(platform("com.netflix.spinnaker.kork.internal:kork-bom"))
   constraints {
     rootProject
       .subprojects
