--- a/keel-sql/keel-sql.gradle
+++ b/keel-sql/keel-sql.gradle
@@ -20,7 +20,7 @@ clean {
 dependencies {
   implementation(project(":keel-core"))
   implementation(project(":keel-artifact"))
-  implementation("io.spinnaker.kork:kork-sql")
+  implementation("com.netflix.spinnaker.kork.internal:kork-sql")
   implementation("org.springframework:spring-jdbc")
   implementation("org.springframework:spring-tx")
   implementation("org.jooq:jooq")
@@ -29,7 +29,7 @@ dependencies {
 
   runtimeOnly("mysql:mysql-connector-java")
 
-  testImplementation("io.spinnaker.kork:kork-sql-test")
+  testImplementation("com.netflix.spinnaker.kork.internal:kork-sql-test")
   testImplementation("io.strikt:strikt-core")
   testImplementation(project(":keel-spring-test-support"))
   testImplementation(project(":keel-test"))
@@ -40,12 +40,12 @@ dependencies {
   }
   testImplementation("org.testcontainers:mysql:${testContainersVersion}")
 
-  jooqGenerator(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
+  jooqGenerator(platform("com.netflix.spinnaker.netflixplatform:netflixplatform-bom:${netflixplatformVersion}"))
   jooqGenerator("mysql:mysql-connector-java")
   jooqGenerator("org.jooq:jooq-meta-extensions")
   jooqGenerator("ch.qos.logback:logback-classic:1.2.3")
 
-  liquibaseRuntime(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
+  liquibaseRuntime(platform("com.netflix.spinnaker.netflixplatform:netflixplatform-bom:${netflixplatformVersion}"))
   liquibaseRuntime("org.liquibase:liquibase-core:3.8.9")
   liquibaseRuntime("ch.qos.logback:logback-classic:1.2.3")
   liquibaseRuntime("org.yaml:snakeyaml:1.28")
