--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -377,3 +377,6 @@ databaseChangeLog:
 - include:
     file: changelog/20210928-add-status-to-feature-rollout.yml
     relativeToChangelogFile: true
+- include:
+    file: changelog/20211007-task-tracking-indecies.yml
+    relativeToChangelogFile: true
