feat(ops): cancel relevant in flight tasks pin/veto
Squashed commit of the following:

commit 2beabdca39bcd1880509a521e092cf2a1d6408e9
Author: Emily Burns <emburns@netflix.com>
Date:   Mon Oct 11 14:02:52 2021 -0700

    fix(pr): add user to cancel task

commit eb8fa9813bcc67c5829ecfa081fd6cdaa01164a8
Author: Emily Burns <emburns@netflix.com>
Date:   Fri Oct 8 10:55:09 2021 -0700

    feat(ops): cancel relevant in flight tasks pin/veto

(cherry picked from commit 6df3fde2709b896ffd47a4d1d5b6ddd7cf9224cd)

--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -380,3 +380,6 @@ databaseChangeLog:
 - include:
     file: changelog/20211007-task-tracking-indecies.yml
     relativeToChangelogFile: true
+- include:
+    file: changelog/20211008-version-task-tracking.yml
+    relativeToChangelogFile: true
