--- a/keel-core/keel-core.gradle
+++ b/keel-core/keel-core.gradle
@@ -14,6 +14,7 @@ dependencies {
   api("org.jetbrains.kotlinx:kotlinx-coroutines-slf4j")
   api("org.apache.commons:commons-lang3")
   api("com.github.ben-manes.caffeine:caffeine")
+  api("com.netflix.buoy:buoy-client:0.3.0")
 
   implementation("org.springframework:spring-tx")
   implementation("org.springframework:spring-web")
