--- a/keel-ec2-plugin/keel-ec2-plugin.gradle
+++ b/keel-ec2-plugin/keel-ec2-plugin.gradle
@@ -15,6 +15,7 @@ dependencies {
   implementation("com.netflix.frigga:frigga")
   implementation("org.jetbrains.kotlinx:kotlinx-coroutines-slf4j")
   implementation("io.swagger.core.v3:swagger-annotations:2.1.2")
+  implementation("com.netflix.buoy:buoy-client:0.3.0")
 
   testImplementation(project(":keel-test"))
   testImplementation(project(":keel-retrofit-test-support"))
