--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -383,3 +383,6 @@ databaseChangeLog:
 - include:
     file: changelog/20211008-version-task-tracking.yml
     relativeToChangelogFile: true
+- include:
+    file: changelog/20211014-artifact-is-preview-column.yml
+    relativeToChangelogFile: true
