chore(dgs): Migrate to match the reggie schema format
Squashed commit of the following:

commit cacd4334d8cec18b8a97286bc51d7b1126ab5ae9
Author: Rani <rhorev@netflix.com>
Date:   Mon Oct 18 15:09:06 2021 -0700

    fix(pr): fix tests

commit f0211aa15fd05140add2f7651154e600db73b24d
Author: Rani <rhorev@netflix.com>
Date:   Mon Oct 18 14:25:11 2021 -0700

    chore(pr): added some basic testing to verify both queries are working properly

commit 5d1a800f1e2b7507ce0b8386fadbb274ecaae309
Author: Rani <rhorev@netflix.com>
Date:   Mon Oct 18 14:24:38 2021 -0700

    chore(dgs): removed unused vars

commit 8b4ef5961b7b76c2655d08b987987b2d31cbecf1
Author: Rani <rhorev@netflix.com>
Date:   Fri Oct 15 11:27:38 2021 -0700

    fix(pr): missing prefix

commit f119b5f06a2c0e2e06113d4eff3c1167e46bd70b
Author: Rani <rhorev@netflix.com>
Date:   Fri Oct 15 11:12:08 2021 -0700

    fix(pr): missing underscore

commit ba2f7a88f85804aa861011743765b6dc193844e3
Author: Rani <rhorev@netflix.com>
Date:   Thu Oct 14 21:27:22 2021 -0700

    chore(dgs): duplicate schema and all queries and mutations

commit d7de84dabf53badd78f3e6beee5a9f9f09bf0210
Author: Rani <rhorev@netflix.com>
Date:   Thu Oct 14 21:26:57 2021 -0700

    chore(web): update dgs version and locks

(cherry picked from commit 890203f593259cc7e25642e5482b47b4f7c03569)

--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -50,8 +50,11 @@ dependencies {
   implementation("com.netflix.spinnaker.kork.internal:kork-plugins")
   implementation("com.slack.api:bolt-servlet:${slackSdkVersion}")
   implementation("com.graphql-java:graphql-java-extended-scalars:16.0.1")
-  implementation(platform('com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:4.3.2'))
+
+  // DGS dependencies
+  implementation(platform('com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:4.9.0'))
   implementation("com.netflix.graphql.dgs:graphql-dgs-spring-boot-starter")
+  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda'
 
   runtimeOnly("com.netflix.spinnaker.kork.internal:kork-runtime")
   runtimeOnly("io.springfox:springfox-boot-starter:3.0.0")
