Revert "chore(build): Align kork/fiat coordinates on com.spinnaker.netflix.{}.internal"
This reverts commit 6f7a545e2a1b0ff3e00b249f4b60a18ebded8912.

--- a/keel-api/keel-api.gradle
+++ b/keel-api/keel-api.gradle
@@ -6,8 +6,8 @@
  * dependencies along for the ride -- ideally nothing at all.
  */
 dependencies {
-  api("com.netflix.spinnaker.kork.internal:kork-plugins-api")
-  api("com.netflix.spinnaker.kork.internal:kork-exceptions")
+  api("io.spinnaker.kork:kork-plugins-api")
+  api("io.spinnaker.kork:kork-exceptions")
   api("de.huxhorn.sulky:de.huxhorn.sulky.ulid")
   testImplementation("io.strikt:strikt-core")
   testImplementation("dev.minutest:minutest")
