--- a/keel-core/keel-core.gradle
+++ b/keel-core/keel-core.gradle
@@ -8,7 +8,7 @@ dependencies {
   api("org.springframework:spring-context")
   api("org.springframework.boot:spring-boot-autoconfigure")
   api("com.netflix.frigga:frigga")
-  api("com.netflix.spinnaker.kork.internal:kork-core")
+  api("io.spinnaker.kork:kork-core")
   api("net.swiftzer.semver:semver:1.1.0")
   api("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8")
   api("org.jetbrains.kotlinx:kotlinx-coroutines-slf4j")
@@ -20,11 +20,11 @@ dependencies {
   implementation("io.github.resilience4j:resilience4j-kotlin")
   implementation("io.github.resilience4j:resilience4j-retry")
   implementation("com.newrelic.agent.java:newrelic-api:6.1.0")
-  implementation("com.netflix.spinnaker.kork.internal:kork-plugins")
+  implementation("io.spinnaker.kork:kork-plugins")
   implementation("org.jgrapht:jgrapht-core:1.5.1")
-  implementation("com.netflix.spinnaker.kork.internal:kork-web")
-  implementation("com.netflix.spinnaker.fiat.internal:fiat-api")
-  implementation("com.netflix.spinnaker.fiat.internal:fiat-core")
+  implementation("io.spinnaker.kork:kork-web")
+  implementation("io.spinnaker.fiat:fiat-api:${fiatVersion}")
+  implementation("io.spinnaker.fiat:fiat-core:${fiatVersion}")
   implementation(project(":keel-ec2-api"))  // needed for resource dependency logic
 
   testImplementation(project(":keel-test"))
