--- a/keel-titus-plugin/keel-titus-plugin.gradle
+++ b/keel-titus-plugin/keel-titus-plugin.gradle
@@ -9,8 +9,8 @@ dependencies {
   implementation(project(":keel-docker"))
   implementation(project(":keel-artifact"))
   implementation(project(":keel-network"))
-  implementation("com.netflix.spinnaker.kork.internal:kork-core")
-  implementation("com.netflix.spinnaker.kork.internal:kork-web")
+  implementation("io.spinnaker.kork:kork-core")
+  implementation("io.spinnaker.kork:kork-web")
   implementation("org.springframework:spring-context")
   implementation("org.springframework.boot:spring-boot-autoconfigure")
   implementation("com.netflix.frigga:frigga")
