--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -36,18 +36,18 @@ dependencies {
   implementation(project(":keel-scm"))
   implementation(project(":keel-retrofit"))
 
-  implementation("com.netflix.spinnaker.kork.internal:kork-web")
-  implementation("com.netflix.spinnaker.kork.internal:kork-artifacts")
-  implementation("com.netflix.spinnaker.kork.internal:kork-encryption")
+  implementation("io.spinnaker.kork:kork-web")
+  implementation("io.spinnaker.kork:kork-artifacts")
+  implementation("io.spinnaker.kork:kork-encryption")
   implementation("org.springframework.boot:spring-boot-starter-actuator")
   implementation("org.springframework.boot:spring-boot-starter-web")
   implementation("org.springframework.security:spring-security-config")
-  implementation("com.netflix.spinnaker.fiat.internal:fiat-api")
-  implementation("com.netflix.spinnaker.fiat.internal:fiat-core")
+  implementation("io.spinnaker.fiat:fiat-api:${fiatVersion}")
+  implementation("io.spinnaker.fiat:fiat-core:${fiatVersion}")
   implementation("net.logstash.logback:logstash-logback-encoder")
   implementation("io.swagger.core.v3:swagger-annotations:2.1.2")
   implementation("org.apache.maven:maven-artifact:3.6.3")
-  implementation("com.netflix.spinnaker.kork.internal:kork-plugins")
+  implementation("io.spinnaker.kork:kork-plugins")
   implementation("com.slack.api:bolt-servlet:${slackSdkVersion}")
   implementation("com.graphql-java:graphql-java-extended-scalars:16.0.1")
 
@@ -56,7 +56,7 @@ dependencies {
   implementation("com.netflix.graphql.dgs:graphql-dgs-spring-boot-starter")
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda'
 
-  runtimeOnly("com.netflix.spinnaker.kork.internal:kork-runtime")
+  runtimeOnly("io.spinnaker.kork:kork-runtime")
   runtimeOnly("io.springfox:springfox-boot-starter:3.0.0")
 
   testImplementation(project(":keel-test"))
@@ -66,11 +66,11 @@ dependencies {
   testImplementation(project(":keel-clouddriver"))
   testImplementation("io.strikt:strikt-jackson")
   testImplementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-  testImplementation("com.netflix.spinnaker.kork.internal:kork-security")
+  testImplementation("io.spinnaker.kork:kork-security")
   testImplementation("com.squareup.okhttp3:mockwebserver")
   testImplementation("org.testcontainers:mysql:${testContainersVersion}")
   testImplementation("com.networknt:json-schema-validator:1.0.43")
-  testImplementation("com.netflix.spinnaker.kork.internal:kork-plugins")
+  testImplementation("io.spinnaker.kork:kork-plugins")
   testImplementation("com.graphql-java:graphql-java-extended-scalars:16.0.0")
   testRuntimeOnly(project(":keel-ec2-plugin"))
 }
