--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,10 @@ allprojects {
     }
 
     dependencies {
-      annotationProcessor(platform("com.netflix.spinnaker.kork.internal:kork-bom"))
+      annotationProcessor(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
       annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
-      implementation(platform("com.netflix.spinnaker.kork.internal:kork-bom"))
+      implementation(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
       implementation("org.slf4j:slf4j-api")
 
       testImplementation("org.junit.platform:junit-platform-runner")
