Revert "Merge pull request #571 in SPKR/keel-nflx from fix-java-toolchain to master"
This reverts commit 9adc94d653a80eec04875ec564880260e49c1374.

--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,8 @@ allprojects {
     apply(plugin: "com.diffplug.spotless")
 
     java {
-      toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
-      }
+      sourceCompatibility = JavaVersion.VERSION_11
+      targetCompatibility = JavaVersion.VERSION_11
     }
 
     dependencies {
