chore(upgrades): Patch versions to match other services and some minor updates to libs

--- a/keel-clouddriver/keel-clouddriver.gradle
+++ b/keel-clouddriver/keel-clouddriver.gradle
@@ -17,5 +17,5 @@ dependencies {
   testImplementation("io.strikt:strikt-core")
   testImplementation(project(":keel-spring-test-support"))
 
-  runtime("org.jetbrains.kotlin:kotlin-reflect")
+  implementation("org.jetbrains.kotlin:kotlin-reflect")
 }
