--- a/gradle/kotlin.gradle
+++ b/gradle/kotlin.gradle
@@ -2,9 +2,19 @@ apply plugin: "kotlin"
 apply plugin: "kotlin-spring"
 apply plugin: "kotlin-allopen"
 
+configurations.all {
+  resolutionStrategy {
+    eachDependency { details ->
+      if (details.requested.group == "org.jetbrains.kotlin") {
+        details.useVersion kotlinVersion
+      }
+    }
+  }
+}
+
 compileKotlin {
   kotlinOptions {
-    languageVersion = "1.4"
+    languageVersion = "1.5"
     jvmTarget = "11"
     // see https://kotlinlang.org/docs/java-to-kotlin-interop.html#compatibility-mode-for-default-methods
     freeCompilerArgs += "-Xjvm-default=enable"
@@ -13,7 +23,7 @@ compileKotlin {
 
 compileTestKotlin {
   kotlinOptions {
-    languageVersion = "1.4"
+    languageVersion = "1.5"
     jvmTarget = "11"
     freeCompilerArgs += "-Xjvm-default=enable"
   }
