--- a/keel-sql/src/main/resources/db/changelog/20200302-drop-api-version.yml
+++ b/keel-sql/src/main/resources/db/changelog/20200302-drop-api-version.yml
@@ -17,7 +17,7 @@ databaseChangeLog:
         tableName: resource
         columnName: api_version
     rollback:
-      - createColumn:
+      - addColumn:
           tableName: resource
           column:
             name: api_version
