--- a/keel-sql/src/main/resources/db/changelog/20200107-default-promotion-status.yml
+++ b/keel-sql/src/main/resources/db/changelog/20200107-default-promotion-status.yml
@@ -3,14 +3,14 @@ databaseChangeLog:
       id: default-promotion-status
       author: fletch
       changes:
-      - upate:
+      - update:
           tableName: delivery_artifact_version
           columns:
             - column:
                 name: promotion_status
                 value: APPROVED
           where: approved_at is not null
-      - upate:
+      - update:
           tableName: delivery_artifact_version
           columns:
             - column:
