chore(upgrades): Bump versions to match other services
Updates dependencies such as:
* Kotlin to 1.5.32
* Kork to 7.220.0
* MySQL test version to 8.0.36
* Gradle to 7.6.1

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ allprojects {
       annotationProcessor(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
       annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
-      implementation(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
+      implementation(enforcedPlatform("io.spinnaker.kork:kork-bom:${korkVersion}"))
       implementation("org.slf4j:slf4j-api")
 
       testImplementation("org.junit.platform:junit-platform-runner")
