--- a/gradle/test.gradle
+++ b/gradle/test.gradle
@@ -9,6 +9,9 @@ dependencies {
 }
 
 test {
+  minHeapSize = "512m"
+  maxHeapSize = "1g"
+
   useJUnitPlatform {
     includeEngines("junit-jupiter")
   }
