--- a/keel-sql/keel-sql.gradle
+++ b/keel-sql/keel-sql.gradle
@@ -46,9 +46,9 @@ dependencies {
   jooqGenerator("ch.qos.logback:logback-classic:1.2.3")
 
   liquibaseRuntime(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
-  liquibaseRuntime("org.liquibase:liquibase-core:3.8.9")
+  liquibaseRuntime("org.liquibase:liquibase-core:4.24.0")
   liquibaseRuntime("ch.qos.logback:logback-classic:1.2.3")
-  liquibaseRuntime("org.yaml:snakeyaml:1.28")
+  liquibaseRuntime("org.yaml:snakeyaml:1.31")
   liquibaseRuntime("mysql:mysql-connector-java")
 }
 
@@ -62,7 +62,7 @@ liquibaseUpdate {
         commandLine("sh", "-c", "docker stop mysqlJooq >/dev/null 2>&1 || true")
       }
       exec {
-        commandLine("sh", "-c", "docker run --name mysqlJooq --health-cmd='mysqladmin ping -s' -d --rm -e MYSQL_ROOT_PASSWORD=sa -e MYSQL_DATABASE=keel -p 6603:3306 mysql:5.7 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci >/dev/null 2>&1; while STATUS=\$(docker inspect --format \"{{.State.Health.Status}}\" mysqlJooq); [ \$STATUS != \"healthy\" ]; do if [ \$STATUS = \"unhealthy\" ]; then echo \"Docker failed to start\"; exit -1; fi; sleep 1; done")
+        commandLine("sh", "-c", "docker run --name mysqlJooq --health-cmd='mysqladmin ping -s' -d --rm -e MYSQL_ROOT_PASSWORD=sa -e MYSQL_DATABASE=keel -p 6603:3306 mysql:8.0.36 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci >/dev/null 2>&1; while STATUS=\$(docker inspect --format \"{{.State.Health.Status}}\" mysqlJooq); [ \$STATUS != \"healthy\" ]; do if [ \$STATUS = \"unhealthy\" ]; then echo \"Docker failed to start\"; exit -1; fi; sleep 1; done")
       }
     }
   }
@@ -79,7 +79,7 @@ afterEvaluate {
 
 jooq {
   // get the version of JOOQ from Spring Boot
-  version = "3.13.6"
+  version = "3.14.16"
 
   configurations {
     main {
@@ -131,6 +131,16 @@ jooq {
               forcedType {
                 name = "LONGVARCHAR"
                 includeTypes = "JSON"
+              }
+              // Automatically convert bit(1) type to Boolean
+              forcedType {
+                name = "BOOLEAN"
+                includeTypes = "(?i:BIT\\(1\\))"
+              }
+              // Automatically convert tinyint(1) type to Boolean
+              forcedType {
+                name = "BOOLEAN"
+                includeTypes = "(?i:TINYINT\\(1\\))"
               }
               // Use Instant rather than LocalDateTime for TIMESTAMP columns
               forcedType {
@@ -263,8 +273,8 @@ liquibase {
   activities.register("local") {
     arguments = [
       "logLevel"     : "severe",
-      "changeLogFile": "src/main/resources/db/databaseChangeLog.yml",
-      "url"          : "jdbc:mysql://localhost:3306/keel?useSSL=false&serverTimezone=UTC",
+      "changeLogFile": "keel-sql/src/main/resources/db/databaseChangeLog.yml",
+      "url"          : "jdbc:mysql://localhost:3306/keel?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true",
       "username"     : "root",
       "password"     : ""
     ]
@@ -272,8 +282,8 @@ liquibase {
   activities.register("docker") {
     arguments = [
       "logLevel"     : "severe",
-      "changeLogFile": "src/main/resources/db/databaseChangeLog.yml",
-      "url"          : "jdbc:mysql://127.0.0.1:6603/keel?useSSL=false&serverTimezone=UTC",
+      "changeLogFile": "keel-sql/src/main/resources/db/databaseChangeLog.yml",
+      "url"          : "jdbc:mysql://127.0.0.1:6603/keel?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true",
       "username"     : "root",
       "password"     : "sa"
     ]
