refactor(mysql): update mysql connector coordinate during upgrade to spring boot 2.7.x
In spring boot 2.7.8 onwards mysql connector coordinate mysql:mysql-connector-java has been removed and only com.mysql:mysql-connector-j coordinate exist.

https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.7-Release-Notes#mysql-jdbc-driver

So, updating the mysql connector coordinate as com.mysql:mysql-connector-j with spring boot upgrade to 2.7.18.

https://repo1.maven.org/maven2/org/springframework/boot/spring-boot-dependencies/2.7.18/spring-boot-dependencies-2.7.18.pom

--- a/keel-sql/keel-sql.gradle
+++ b/keel-sql/keel-sql.gradle
@@ -27,7 +27,7 @@ dependencies {
   implementation("com.zaxxer:HikariCP")
   implementation("org.liquibase:liquibase-core")
 
-  runtimeOnly("mysql:mysql-connector-java")
+  runtimeOnly("com.mysql:mysql-connector-j")
 
   testImplementation("io.spinnaker.kork:kork-sql-test")
   testImplementation("io.strikt:strikt-core")
@@ -41,7 +41,7 @@ dependencies {
   testImplementation("org.testcontainers:mysql:${testContainersVersion}")
 
   jooqGenerator(platform("io.spinnaker.kork:kork-bom:${korkVersion}"))
-  jooqGenerator("mysql:mysql-connector-java")
+  jooqGenerator("com.mysql:mysql-connector-j")
   jooqGenerator("org.jooq:jooq-meta-extensions")
   jooqGenerator("ch.qos.logback:logback-classic:1.2.3")
 
@@ -49,7 +49,7 @@ dependencies {
   liquibaseRuntime("org.liquibase:liquibase-core:4.24.0")
   liquibaseRuntime("ch.qos.logback:logback-classic:1.2.3")
   liquibaseRuntime("org.yaml:snakeyaml:1.31")
-  liquibaseRuntime("mysql:mysql-connector-java")
+  liquibaseRuntime("com.mysql:mysql-connector-j")
 }
 
 liquibaseUpdate {
