--- a/Dockerfile.java11.ubuntu
+++ b/Dockerfile.java11.ubuntu
@@ -1,8 +1,7 @@
-FROM alpine:3.16
+FROM ubuntu:bionic
 LABEL maintainer="sig-platform@spinnaker.io"
-RUN apk --no-cache add --update bash openjdk17-jre
-RUN addgroup -S -g 10111 spinnaker
-RUN adduser -S -G spinnaker -u 10111 spinnaker
+RUN apt-get update && apt-get -y install openjdk-11-jre-headless wget
+RUN adduser --system --uid 10111 --group spinnaker
 COPY keel-web/build/install/keel /opt/keel
 RUN mkdir -p /opt/keel/plugins && chown -R spinnaker:nogroup /opt/keel/plugins
 USER spinnaker
