--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ testContainersVersion=1.15.3
 okHttpVersion=4.5.0
 resilience4jVersion=1.5.0
 spinnakerGradleVersion=8.32.1
+targetJava17=false
 
 # Used to control whether to spin up docker to run liquibase before jooq
 buildingInDocker=false
