--- a/gradle/kotlin.gradle
+++ b/gradle/kotlin.gradle
@@ -5,16 +5,16 @@ apply plugin: "kotlin-allopen"
 compileKotlin {
   kotlinOptions {
     languageVersion = "1.6"
-    jvmTarget = "11"
+    jvmTarget = "17"
     // see https://kotlinlang.org/docs/java-to-kotlin-interop.html#compatibility-mode-for-default-methods
-    freeCompilerArgs += "-Xjvm-default=enable"
+    freeCompilerArgs += "-Xjvm-default=all"
   }
 }
 
 compileTestKotlin {
   kotlinOptions {
     languageVersion = "1.6"
-    jvmTarget = "11"
-    freeCompilerArgs += "-Xjvm-default=enable"
+    jvmTarget = "17"
+    freeCompilerArgs += "-Xjvm-default=all"
   }
 }
