--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -1,9 +1,9 @@
-FROM ubuntu:bionic
+FROM ubuntu:jammy
 LABEL maintainer="sig-platform@spinnaker.io"
 RUN echo "mysql-server mysql-server/root_password password sa" | debconf-set-selections
 RUN echo "mysql-server mysql-server/root_password_again password sa" | debconf-set-selections
 RUN apt-get update && apt-get install -y \
-    openjdk-11-jdk \
+    openjdk-17-jdk \
     mysql-server \
  && rm -rf /var/lib/apt/lists/*
 ENV GRADLE_USER_HOME /workspace/.gradle
