--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,8 @@ okHttpVersion=4.5.0
 resilience4jVersion=1.5.0
 spinnakerGradleVersion=8.32.1
 
+org.gradle.jvmargs=-Xmx4g -Xms4g
+
 # Used to control whether to spin up docker to run liquibase before jooq
 buildingInDocker=false
 
