--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -43,7 +43,7 @@ dependencies {
   implementation("io.spinnaker.fiat:fiat-api:${fiatVersion}")
   implementation("io.spinnaker.fiat:fiat-core:${fiatVersion}")
   implementation("net.logstash.logback:logstash-logback-encoder")
-  implementation("io.swagger.core.v3:swagger-annotations:2.1.2")
+  implementation("io.swagger.core.v3:swagger-annotations")
   implementation("org.apache.maven:maven-artifact:3.6.3")
   implementation("io.spinnaker.kork:kork-plugins")
   implementation("com.slack.api:bolt-servlet:1.6.0")
@@ -55,7 +55,6 @@ dependencies {
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda'
 
   runtimeOnly("io.spinnaker.kork:kork-runtime")
-  runtimeOnly("io.springfox:springfox-boot-starter:3.0.0")
 
   testImplementation(project(":keel-test"))
   testImplementation(project(":keel-core-test"))
